--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -6,14 +6,14 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Data Mining</a>
+        <a class="navbar-brand" href="http://127.0.0.1:5000/">Data Mining</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	     <span class="navbar-toggler-icon"></span>
 	 </button>
          <div class="collapse navbar-collapse" id="navbarNav">
              <ul class="navbar-nav">
 	         <li class="nav-item active">
-                     <a class="nav-link" href="#">Museums & Libraries <span class="sr-only">(current)</span></a>
+                     <a class="nav-link" href="http://127.0.0.1:5000/Museum">Museums & Libraries <span class="sr-only">(current)</span></a>
 		</li>
 		<li class="nav-item">
 		    <a class="nav-link" href="#">Travelers</a>
