--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -13,8 +13,11 @@
          <div class="collapse navbar-collapse" id="navbarNav">
              <ul class="navbar-nav">
 	         <li class="nav-item active">
-                     <a class="nav-link" href="http://127.0.0.1:5000/Museum">Museums & Libraries <span class="sr-only">(current)</span></a>
+                     <a class="nav-link" href="http://127.0.0.1:5000/Museum">Museums <span class="sr-only">(current)</span></a>
 		</li>
+        <li class="nav-item active">
+            <a class="nav-link" href="http://127.0.0.1:5000/Libraries">Libraries <span class="sr-only">(current)</span></a>
+        </li>
 		<li class="nav-item">
 		    <a class="nav-link" href="#">Travelers</a>
 		</li>
