--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,14 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<h1></h1>
-
-<table>
-    {% for t in content %}
-        <tr>
-        {% for i in t %}
-            <td>{{ i }}</td>
-        {% endfor %}
-        </tr>
-    {% endfor %}
-     </table>
+<h1>Test</h1>
+<p>{{content}}</p>
 {% endblock %}
